Fix index.html and style.css structure, add content to first page

--- a/index.html
+++ b/index.html
@@ -12,102 +12,104 @@
 <body>
     <div class="container">
         <div class="container_title">
-            <h1 class="title_odin">~~Odin Recipes~~</h1>
+            <h1 class="title_odin">~~Odin Recipes~~<br>-|-|-</h1>
         </div>
-        <div>
-            <div class="container_item">
-                <h3>
-                    <a href="recipes/stuffedPeppers.html" class="link_title">Stuffed Peppers</a><sup>*click me!</sup>
-                </h3>
-                <div class="container_item_div">
-                    <p>
-                        <b>Stuffed peppers</b> is a dish common in many cuisines. It consists of hollowed or
-                        halved <i style="color: red">peppers</i>
-                        filled
-                        with
-                        any of a variety of fillings, often including <i style="color: orangered">meat</i>, <i
-                            style="color: green">vegetables</i>, <i style="color: darkgoldenrod">cheese</i>,
-                        <i style="color: lightslategray">rice</i>, or <i style="color: orange">sauce</i>. The dish
-                        is
-                        usually assembled by filling the cavities of the peppers and then cooking.
-                    </p>
-                    <a href="recipes/stuffedPeppers.html" class="link_img">
-                        <img src="/img/stuffed-peppers.jpg" alt="Stuffed Peppers">
-                    </a>
-                </div>
-            </div>
-            <hr>
-            <div class="container_item">
-                <h3>
-                    <a href="recipes/cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a><sup>*</sup>
-                </h3>
-                <div class="container_item_div">
-                    <p>
-                        Quick, easy, and tasty <b>macaroni and cheese</b> dish. Fancy, designer <i
-                            style="color: darkorange">mac</i> and <i style="color: darkgoldenrod">cheese</i> often
-                        costs
-                        forty or
-                        fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the
-                        best
-                        tasting. This simple recipe is <i style="color: lightseagreen">cheap</i> and <i
-                            style="color: darkolivegreen">tasty</i>.
-                    </p>
-                    <a href="recipes/stuffedPeppers.html" class="link_img">
-                        <img src="/img/cheese-macaroni.jpg" alt="Macaroni">
-                    </a>
-                </div>
 
+        <div class="container_item">
+            <h3>
+                <a href="recipes/stuffedPeppers.html" class="link_title">Stuffed Peppers</a><sup>*click me!</sup>
+            </h3>
+            <div class="container_item_div">
+                <p>
+                    <b>Stuffed peppers</b> is a dish common in many cuisines. It consists of hollowed or
+                    halved <i style="color: red">peppers</i>
+                    filled
+                    with
+                    any of a variety of fillings, often including <i style="color: orangered">meat</i>, <i
+                        style="color: green">vegetables</i>, <i style="color: darkgoldenrod">cheese</i>,
+                    <i style="color: lightslategray">rice</i>, or <i style="color: orange">sauce</i>. The dish
+                    is
+                    usually assembled by filling the cavities of the peppers and then cooking.
+                </p>
+                <a href="recipes/stuffedPeppers.html" class="link_img">
+                    <img src="/img/stuffed-peppers.jpg" alt="Stuffed Peppers">
+                </a>
             </div>
             <hr>
-            <div class="container_item">
-                <h3>
-                    <a href="recipes/cornbreadMuffins.html" class="link_title">Jalapeño Cornbread
-                        Muffins</a><sup>*</sup>
-                </h3>
-                <div class="container_item_div">
-                    <p>
-                        Chopped <i style="color: darkcyan">jalapeño</i> adds the perfect amount of kick to this
-                        delicious cornbread muffin recipe!
-                        Paired
-                        with
-                        the subtle sweetness of <i style="color: goldenrod">honey</i> and <i style="color: brown">brown
-                            sugar</i>, these easy <b>cornbread muffins</b> are a wonderful
-                        snack
-                        and
-                        side dish.
-                    </p>
-                    <a href="recipes/stuffedPeppers.html" class="link_img">
-                        <img src="/img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
-                    </a>
-                </div>
+        </div>
+
+        <div class="container_item">
+            <h3>
+                <a href="recipes/cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a><sup>*</sup>
+            </h3>
+            <div class="container_item_div">
+                <p>
+                    Quick, easy, and tasty <b>macaroni and cheese</b> dish. Fancy, designer <i
+                        style="color: darkorange">mac</i> and <i style="color: darkgoldenrod">cheese</i> often
+                    costs
+                    forty or
+                    fifty dollars to prepare when you have so many expensive cheeses, but they aren't always the
+                    best
+                    tasting. This simple recipe is <i style="color: lightseagreen">cheap</i> and <i
+                        style="color: green">tasty</i>.
+                </p>
+                <a href="recipes/stuffedPeppers.html" class="link_img">
+                    <img src="/img/cheese-macaroni.jpg" alt="Macaroni">
+                </a>
             </div>
             <hr>
-            <div class="container_item">
-                <h3>
-                    <a href="recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a><sup>*</sup>
-                </h3>
-                <div class="container_item_div">
-                    <p>
-                        This <b>French apple cake</b> is incredibly delicious. France is famous for its fabulously fancy
-                        <i style="color: rgb(42, 165, 69)">pastries</i>
-                        and
-                        <i style="color: rgb(110, 42, 165)">baked goods</i>, so you might get some skeptic looks when
-                        you tell them that this is your favorite
-                        apple
-                        cake – but trust me – this simple, rustic, easy to make cake is absolutely <i>amazing</i>.
-                    </p>
-                    <a href="recipes/stuffedPeppers.html" class="link_img">
-                        <img src="/img/french-apple-cake.jpg" alt="Apple Cake">
-                    </a>
-                </div>
-                <hr>
-                <div>
-                    <p style="font-size: medium; text-align: center;">
-                        &#169;IvanS
-                    </p>
-                </div>
+        </div>
+
+        <div class="container_item">
+            <h3>
+                <a href="recipes/cornbreadMuffins.html" class="link_title">Jalapeño Cornbread
+                    Muffins</a><sup>*</sup>
+            </h3>
+            <div class="container_item_div">
+                <p>
+                    Chopped <i style="color: darkcyan">jalapeño</i> adds the perfect amount of kick to this
+                    delicious cornbread muffin recipe!
+                    Paired
+                    with
+                    the subtle sweetness of <i style="color: goldenrod">honey</i> and <i style="color: brown">brown
+                        sugar</i>, these easy <b>cornbread muffins</b> are a wonderful
+                    snack
+                    and
+                    side dish.
+                </p>
+                <a href="recipes/stuffedPeppers.html" class="link_img">
+                    <img src="/img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
+                </a>
+            </div>
+            <hr>
+        </div>
+
+        <div class="container_item">
+            <h3>
+                <a href="recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a><sup>*</sup>
+            </h3>
+            <div class="container_item_div">
+                <p>
+                    This <b>French apple cake</b> is incredibly delicious. France is famous for its fabulously fancy
+                    <i style="color: rgb(42, 165, 69)">pastries</i>
+                    and
+                    <i style="color: rgb(110, 42, 165)">baked goods</i>, so you might get some skeptic looks when
+                    you tell them that this is your favorite
+                    apple
+                    cake – but trust me – this simple, rustic, easy to make cake is absolutely <i>amazing</i>.
+                </p>
+                <a href="recipes/stuffedPeppers.html" class="link_img">
+                    <img src="/img/french-apple-cake.jpg" alt="Apple Cake">
+                </a>
+            </div>
+            <hr>
+            <div>
+                <p style="font-size: medium; text-align: center;">
+                    &#169;IvanS
+                </p>
             </div>
         </div>
+
     </div>
 </body>
 
