--- a/recipes/stuffedPeppers.html
+++ b/recipes/stuffedPeppers.html
@@ -4,61 +4,118 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/recipes/style.css">
+    <title>Stuffed Peppers by Odin Recipes</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
-    <div class="container_header">
-        <h1>Stuffed Peppers</h1>
-        <p>by Odin Recipes / <a href="/">Home</a></p>
-    </div>
 
-    <div class="container_ingridients">
-        <h2>ingridients</h2>
-        <ul>
-            <li>1 cup water</li>
-            <li>1/2 cup uncooked long grain white rice</li>
-            <li>1 tablespoon vegetable oil</li>
-            <li>1 pound ground beef</li>
-            <li>6 medium green bell peppers</li>
-            <li>16 ounces tomato sauce, divided</li>
-            <li>1 tablespoon Worcestershire sauce</li>
-            <li>1/4 teaspoon garlic powder</li>
-            <li>1/4 teaspoon onion powder</li>
-            <li>salt and ground black pepper to taste</li>
-            <li>1 teaspoon Italian seasoning</li>
-        </ul>
-    </div>
+    <div class="container">
+        <div class="container_title">
+            <h1 class="title_odin">~~Odin Recipes~~</h1>
+        </div>
 
-    <div class="container_directions">
-        <h2>directions</h2>
-        <ul>
-            <li>1 cup water</li>
-            <li>1/2 cup uncooked long grain white rice</li>
-            <li>1 tablespoon vegetable oil</li>
-            <li>1 pound ground beef</li>
-            <li>6 medium green bell peppers</li>
-            <li>16 ounces tomato sauce, divided</li>
-            <li>1 tablespoon Worcestershire sauce</li>
-            <li>1/4 teaspoon garlic powder</li>
-            <li>1/4 teaspoon onion powder</li>
-            <li>salt and ground black pepper to taste</li>
-            <li>1 teaspoon Italian seasoning</li>
-        </ul>
-    </div>
+        <div class="container_item">
+            <div>
+                <a href="/" class="link_title">back to home</a> |
+                <a href="/recipes/cheeseMacaroni.html" class="link_title">next recipe</a>
+            </div>
+            <div class="container_item_div">
+                <h2> Stuffed Peppers </h2>
+            </div>
+            <div class="container_item_div">
+                <img src="/img/stuffed-peppers.jpg" alt="Stuffed Peppers">
+            </div>
+            <hr>
+        </div>
 
-    <div class="container_recipes">
-        <p>go to:</p>
-        <p>
-            <a href="recipes/cheeseMacaroni.html">Simple Macaroni and Cheese</a>
-        </p>
-        <p>
-            <a href="recipes/cornbreadMuffins.html">Jalapeno Cornbread Muffins</a>
-        </p>
-        <p>
-            <a href="recipes/frenchAppleCake.html">French Apple Cake</a>
-        </p>
+        <div class="container_item">
+            <h3>ingridients</h3>
+            <ul>
+                <li>1 cup water</li>
+                <li>1/2 cup uncooked long grain white rice</li>
+                <li>1 tablespoon vegetable oil</li>
+                <li>1 pound ground beef</li>
+                <li>6 medium green bell peppers</li>
+                <li>16 ounces tomato sauce, divided</li>
+                <li>1 tablespoon Worcestershire sauce</li>
+                <li>1/4 teaspoon garlic powder</li>
+                <li>1/4 teaspoon onion powder</li>
+                <li>salt and ground black pepper to taste</li>
+                <li>1 teaspoon Italian seasoning</li>
+            </ul>
+        </div>
+
+        <div class="container_item">
+            <h3>directions</h3>
+            <ol>
+                <li>
+                    <h5>step 1</h5>
+                    <p>Gather all ingredients, and preheat the oven to 350 degrees F (175 degrees C).</p>
+                </li>
+                <li>
+                    <h5>step 2</h5>
+                    <p>Bring water and rice to a boil in a covered saucepan. Reduce heat to low and simmer until
+                        rice is
+                        tender, about 20 minutes.</p>
+                </li>
+                <li>
+                    <h5>step 3</h5>
+                    <p>Meanwhile, heat oil in a skillet over medium heat. Add ground beef and cook until evenly
+                        browned
+                        and crumbly, 7 to 9 minutes.</p>
+                </li>
+                <li>
+                    <h5>step 4</h5>
+                    <p>Hollow out bell peppers by removing and discarding the tops, seeds, and membranes. Slice the
+                        bottoms of the peppers if necessary to make sure they stand up straight.</p>
+                </li>
+                <li>
+                    <h5>step 5</h5>
+                    <p>Arrange peppers in a baking dish with the hollowed sides facing upward.</p>
+                </li>
+                <li>
+                    <h5>step 6</h5>
+                    <p>Prepare filling by mixing cooked beef, cooked rice, 1/2 of the tomato sauce, Worcestershire
+                        sauce, garlic powder, onion powder, salt, and pepper. Spoon an equal amount of filling into
+                        each
+                        hollowed pepper.</p>
+                </li>
+                <li>
+                    <h5>step 7</h5>
+                    <p>Mix remaining tomato sauce and Italian seasoning in a bowl, and pour over the stuffed
+                        peppers.
+                    </p>
+                </li>
+                <li>
+                    <h5>step 8</h5>
+                    <p>Bake in the preheated oven, basting with sauce every 15 minutes, until peppers are tender,
+                        about
+                        1 hour.</p>
+                </li>
+                <li>
+                    <h5>step 9</h5>
+                    <p>Serve hot and enjoy!</p>
+                </li>
+            </ol>
+        </div>
+
+        <div>
+            <div>another recipes:</div>
+            <div>
+                <a href="recipes/cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a>
+            </div>
+            <div>
+                <a href="recipes/cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
+            </div>
+            <div>
+                <a href="recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a>
+            </div>
+
+            <p style="font-size: medium; text-align: center;">
+                &#169;IvanS
+            </p>
+        </div>
     </div>
 </body>
 
