--- a/recipes/stuffedPeppers.html
+++ b/recipes/stuffedPeppers.html
@@ -103,13 +103,13 @@
         <div>
             <div>another recipes:</div>
             <div>
-                <a href="recipes/cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a>
+                <a href="/recipes/cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a>
             </div>
             <div>
-                <a href="recipes/cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
+                <a href="/recipes/cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
             </div>
             <div>
-                <a href="recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a>
+                <a href="/recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a>
             </div>
 
             <p style="font-size: medium; text-align: center;">
