Fix position of div
Use a new class .nav_elem to move dive to center of page

--- a/recipes/cheeseMacaroni.html
+++ b/recipes/cheeseMacaroni.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="container_item">
-            <div>
+            <div class="nav_elem">
                 <a href="/" class="link_title">back to home</a> |
                 <a href="/recipes/cornbreadMuffins.html" class="link_title">next recipe</a>
             </div>
