--- a/recipes/cornbreadMuffins.html
+++ b/recipes/cornbreadMuffins.html
@@ -16,7 +16,7 @@
         </div>
 
         <div class="container_item">
-            <div>
+            <div class="nav_elem">
                 <a href="/" class="link_title">back to home</a> |
                 <a href="/recipes/frenchAppleCake.html" class="link_title">next recipe</a>
             </div>
