--- a/recipes/cheeseMacaroni.html
+++ b/recipes/cheeseMacaroni.html
@@ -18,7 +18,7 @@
         <div class="container_item">
             <div class="nav_elem">
                 <a href="/" class="link_title">back to home</a> |
-                <a href="/recipes/cornbreadMuffins.html" class="link_title">next recipe</a>
+                <a href="cornbreadMuffins.html" class="link_title">next recipe</a>
             </div>
             <div class="container_item_div">
                 <h2> Macaroni and Cheese </h2>
@@ -81,13 +81,13 @@
         <div>
             <div>another recipes:</div>
             <div>
-                <a href="/recipes/stuffedPeppers.html" class="link_title">Stuffes Peppers</a>
+                <a href="stuffedPeppers.html" class="link_title">Stuffes Peppers</a>
             </div>
             <div>
-                <a href="/recipes/cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
+                <a href="cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
             </div>
             <div>
-                <a href="/recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a>
+                <a href="frenchAppleCake.html" class="link_title">French Apple Cake</a>
             </div>
 
             <p style="font-size: medium; text-align: center;">
