--- a/recipes/cheeseMacaroni.html
+++ b/recipes/cheeseMacaroni.html
@@ -24,7 +24,7 @@
                 <h2> Macaroni and Cheese </h2>
             </div>
             <div class="container_item_div">
-                <img src="/img/cheese-macaroni.jpg" alt="Macaroni">
+                <img src="../img/cheese-macaroni.jpg" alt="Macaroni">
             </div>
             <hr>
         </div>
