Fix link to img

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     usually assembled by filling the cavities of the peppers and then cooking.
                 </p>
                 <a href="recipes/stuffedPeppers.html" class="link_img">
-                    <img src="/img/stuffed-peppers.jpg" alt="Stuffed Peppers">
+                    <img src="./img/stuffed-peppers.jpg" alt="Stuffed Peppers">
                 </a>
             </div>
             <hr>
