Fix all img links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         style="color: green">tasty</i>.
                 </p>
                 <a href="recipes/stuffedPeppers.html" class="link_img">
-                    <img src="/img/cheese-macaroni.jpg" alt="Macaroni">
+                    <img src="./img/cheese-macaroni.jpg" alt="Macaroni">
                 </a>
             </div>
             <hr>
@@ -78,7 +78,7 @@
                     side dish.
                 </p>
                 <a href="recipes/stuffedPeppers.html" class="link_img">
-                    <img src="/img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
+                    <img src="./img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
                 </a>
             </div>
             <hr>
@@ -99,7 +99,7 @@
                     cake – but trust me – this simple, rustic, easy to make cake is absolutely <i>amazing</i>.
                 </p>
                 <a href="recipes/stuffedPeppers.html" class="link_img">
-                    <img src="/img/french-apple-cake.jpg" alt="Apple Cake">
+                    <img src="./img/french-apple-cake.jpg" alt="Apple Cake">
                 </a>
             </div>
             <hr>
