--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     tasting. This simple recipe is <i style="color: lightseagreen">cheap</i> and <i
                         style="color: green">tasty</i>.
                 </p>
-                <a href="recipes/stuffedPeppers.html" class="link_img">
+                <a href="recipes/cheeseMacaroni.html" class="link_img">
                     <img src="./img/cheese-macaroni.jpg" alt="Macaroni">
                 </a>
             </div>
@@ -77,7 +77,7 @@
                     and
                     side dish.
                 </p>
-                <a href="recipes/stuffedPeppers.html" class="link_img">
+                <a href="recipes/cornbreadMuffins.html" class="link_img">
                     <img src="./img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
                 </a>
             </div>
@@ -98,7 +98,7 @@
                     apple
                     cake – but trust me – this simple, rustic, easy to make cake is absolutely <i>amazing</i>.
                 </p>
-                <a href="recipes/stuffedPeppers.html" class="link_img">
+                <a href="recipes/frenchAppleCake.html" class="link_img">
                     <img src="./img/french-apple-cake.jpg" alt="Apple Cake">
                 </a>
             </div>
