--- a/recipes/cheeseMacaroni.html
+++ b/recipes/cheeseMacaroni.html
@@ -17,7 +17,7 @@
 
         <div class="container_item">
             <div class="nav_elem">
-                <a href="/" class="link_title">back to home</a> |
+                <a href="../index.html" class="link_title">back to home</a> |
                 <a href="cornbreadMuffins.html" class="link_title">next recipe</a>
             </div>
             <div class="container_item_div">
