--- a/recipes/frenchAppleCake.html
+++ b/recipes/frenchAppleCake.html
@@ -17,14 +17,14 @@
 
         <div class="container_item">
             <div class="nav_elem">
-                <a href="/" class="link_title">back to home</a> |
-                <a href="/recipes/stuffedPeppers.html" class="link_title">next recipe</a>
+                <a href="../index.html" class="link_title">back to home</a> |
+                <a href="stuffedPeppers.html" class="link_title">next recipe</a>
             </div>
             <div class="container_item_div">
                 <h2> Franch Apple Cake </h2>
             </div>
             <div class="container_item_div">
-                <img src="/img/french-apple-cake.jpg" alt="Apple Cake">
+                <img src="../img/french-apple-cake.jpg" alt="Apple Cake">
             </div>
             <hr>
         </div>
@@ -95,13 +95,13 @@
         <div>
             <div>another recipes:</div>
             <div>
-                <a href="/recipes/stuffedPeppers.html" class="link_title">Stuffes Peppers</a>
+                <a href="stuffedPeppers.html" class="link_title">Stuffes Peppers</a>
             </div>
             <div>
-                <a href="/recipes/cheeseMacaroni.html" class="link_title">Macaroni and Cheese</a>
+                <a href="cheeseMacaroni.html" class="link_title">Macaroni and Cheese</a>
             </div>
             <div>
-                <a href="/recipes/cornbreadMuffins.html" class="link_title">Jalapeño Cornbread Muffins</a>
+                <a href="cornbreadMuffins.html" class="link_title">Jalapeño Cornbread Muffins</a>
             </div>
 
             <p style="font-size: medium; text-align: center;">
