--- a/recipes/cornbreadMuffins.html
+++ b/recipes/cornbreadMuffins.html
@@ -17,14 +17,14 @@
 
         <div class="container_item">
             <div class="nav_elem">
-                <a href="/" class="link_title">back to home</a> |
-                <a href="/recipes/frenchAppleCake.html" class="link_title">next recipe</a>
+                <a href="../index.html" class="link_title">back to home</a> |
+                <a href="frenchAppleCake.html" class="link_title">next recipe</a>
             </div>
             <div class="container_item_div">
                 <h2> Jalapeño Cornbread Muffins </h2>
             </div>
             <div class="container_item_div">
-                <img src="/img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
+                <img src="../img/jalapeno-cornbread-muffins.jpg" alt="Muffins">
             </div>
             <hr>
         </div>
@@ -92,13 +92,13 @@
         <div>
             <div>another recipes:</div>
             <div>
-                <a href="/recipes/stuffedPeppers.html" class="link_title">Stuffes Peppers</a>
+                <a href="stuffedPeppers.html" class="link_title">Stuffes Peppers</a>
             </div>
             <div>
-                <a href="/recipes/cheeseMacaroni.html" class="link_title">Macaroni and Cheese</a>
+                <a href="cheeseMacaroni.html" class="link_title">Macaroni and Cheese</a>
             </div>
             <div>
-                <a href="/recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a>
+                <a href="frenchAppleCake.html" class="link_title">French Apple Cake</a>
             </div>
 
             <p style="font-size: medium; text-align: center;">
