--- a/recipes/stuffedPeppers.html
+++ b/recipes/stuffedPeppers.html
@@ -17,14 +17,14 @@
 
         <div class="container_item">
             <div class="nav_elem">
-                <a href="/" class="link_title">back to home</a> |
-                <a href="/recipes/cheeseMacaroni.html" class="link_title">next recipe</a>
+                <a href="../index.html" class="link_title">back to home</a> |
+                <a href="cheeseMacaroni.html" class="link_title">next recipe</a>
             </div>
             <div class="container_item_div">
                 <h2> Stuffed Peppers </h2>
             </div>
             <div class="container_item_div">
-                <img src="/img/stuffed-peppers.jpg" alt="Stuffed Peppers">
+                <img src="../img/stuffed-peppers.jpg" alt="Stuffed Peppers">
             </div>
             <hr>
         </div>
@@ -103,13 +103,13 @@
         <div>
             <div>another recipes:</div>
             <div>
-                <a href="/recipes/cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a>
+                <a href="cheeseMacaroni.html" class="link_title">Simple Macaroni and Cheese</a>
             </div>
             <div>
-                <a href="/recipes/cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
+                <a href="cornbreadMuffins.html" class="link_title">Jalapeno Cornbread Muffins</a>
             </div>
             <div>
-                <a href="/recipes/frenchAppleCake.html" class="link_title">French Apple Cake</a>
+                <a href="frenchAppleCake.html" class="link_title">French Apple Cake</a>
             </div>
 
             <p style="font-size: medium; text-align: center;">
